Продление лицензии по месяца, поиск устройства по коду активации, изменен алгоритм кода генерации.